# Kanban

./: .gitignore  AGENTS.md  Kanban.spec  LICENSE  README.md  demo_kanban.json  demo_multiboard.py  example_kanban.json  example_usage.py  gui_demo.py  main.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: design-and-storage.md
kanban/: __init__.py  board.py  board_cards.py  board_catalog.py  board_columns.py  board_core.py  board_manager.py  board_persistence.py  cli.py  direct_cli.py  direct_cli_board_commands.py  direct_cli_card_commands.py  direct_cli_structure_commands.py  direct_cli_support.py  gui.py  models.py  multi_board_cli.py  multi_board_gui.py  storage.py
kanban/gui/: __init__.py  board_actions.py  board_filters.py  board_navigation.py  board_statistics.py  common.py  dialog_card.py  dialog_help.py  dialog_management.py  dialog_overview.py  dialog_primitives.py  dialogs.py  embedded_board.py  multi_board_app.py  pyside_app.py  shell_ui.py
tests/: gui_test_case.py  test_direct_cli.py  test_gui_board_regressions.py  test_gui_dialog_regressions.py  test_gui_regressions.py
