[project]
name = "kanban"
version = "3.0"
description = "Multi-board Kanban manager with a PySide6 GUI and CLI workflows."
readme = "README.md"
requires-python = ">=3.9,<3.15"
dependencies = [
    "PySide6>=6.10.1,<6.12",
]

[dependency-groups]
dev = [
    "ruff>=0.12.0",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py38"
line-length = 120
src = ["kanban", "tests"]

[tool.ruff.lint]
select = ["F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["kanban"]